@@ -26,6 +26,7 @@
 			<arg><option>-q</option> <replaceable>message QoS</replaceable></arg>
 			<arg><option>--quiet</option></arg>
 			<arg><option>-r</option></arg>
+			<arg><option>-S</option></arg>
 			<group choice='req'>
 				<arg choice='plain'><option>-f</option> <replaceable>file</replaceable></arg>
 				<arg choice='plain'><option>-l</option></arg>
@@ -285,6 +286,17 @@
 				<term><option>--stdin-file</option></term>
 				<listitem>
 					<para>Send a message read from stdin, sending the entire content as a single message.</para>
+				</listitem>
+			</varlistentry>
+			<varlistentry>
+				<term><option>-S</option></term>
+				<listitem>
+					<para>Use SRV lookups to determine which host to connect
+						to. Performs lookups to
+						<option>_mqtt._tcp.&lt;host&gt;</option> when used in
+						conjunction with <option>-h</option>, otherwise uses
+						<option>_mqtt._tcp.&lt;local dns
+							domain&gt;</option>.</para>
 				</listitem>
 			</varlistentry>
 			<varlistentry>
