@@ -34,9 +34,11 @@ Client library:
 - Topics are no longer normalised from e.g a///topic to a/topic. This matches
   the behaviour as clarified by the Oasis MQTT spec. This will lead to
   unexpected behaviour if you were using topics of this form.
+- Add support for SRV lookups.
 
 Clients:
 - Add --ciphers to allow specifying which TLS ciphers to support.
+- Add support for SRV lookups.
 
 1.2 - 20130708
 ==============
